// Prisma schema for SoulRep backend
//
// This schema defines the data model for the SoulRep application. It uses
// PostgreSQL (Neon DB) as the underlying database. The provider and
// connection string are configured via the DATABASE_URL environment
// variable. See the README in the repo root for setup instructions.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

/// Role identifies the type of user. It is kept in a separate enum to
/// support role‑based access control in the application.
enum Role {
  OWNER
  TRAINER
  MEMBER
}

/// PlanType enumerates the subscription plans available for members.
enum PlanType {
  MONTHLY
  QUARTERLY
  YEARLY
}

/// PlanStatus captures whether a member's plan is active, expiring soon or expired.
enum PlanStatus {
  ACTIVE
  EXPIRING
  EXPIRED
}

/// Gender identifies the gender of a member. It is optional in the Member
/// record, but defining an enum helps avoid inconsistent string values.
enum Gender {
  MALE
  FEMALE
  OTHER
}

/// Trainer availability status. Trainers can be available, busy, or off.
enum Availability {
  AVAILABLE
  BUSY
  OFF
}

/// Attendance method used to check into the gym.
enum Method {
  QR
  MANUAL
}

/// InvoiceStatus represents the payment state of an invoice.
enum InvoiceStatus {
  PAID
  PENDING
  OVERDUE
}

/// BookingStatus describes whether a booking has been confirmed, is pending or was cancelled.
enum BookingStatus {
  CONFIRMED
  PENDING
  CANCELLED
}

/// MealType identifies the type of meal (breakfast, lunch, dinner or snack).
enum MealType {
  BREAKFAST
  LUNCH
  DINNER
  SNACK
}

/// FitnessGoal captures the member's primary goal: fat loss, muscle gain, maintenance, endurance or flexibility.
enum FitnessGoal {
  FAT_LOSS
  MUSCLE_GAIN
  MAINTENANCE
  ENDURANCE
  FLEXIBILITY
}

/// ActivityLevel records how active a member is outside of the gym.
enum ActivityLevel {
  SEDENTARY
  LIGHT
  MODERATE
  ACTIVE
  VERY_ACTIVE
}

/// DietaryPreference stores the member's dietary restrictions/preferences.
enum DietaryPreference {
  VEG
  NON_VEG
  VEGAN
  EGGETARIAN
  PESCATARIAN
}

/// Base User record. Every member and trainer is associated with a User. The
/// owner account will also live here. Passwords are stored as hashed
/// strings using a strong password hash (e.g. bcrypt – see the README).
model User {
  id            String      @id @default(uuid())
  /// User's name. Optional because some accounts may not provide a name (e.g. Google sign‑in without profile name).
  name          String?
  /// Email address. Optional because OAuth providers may not always return an email.
  email         String?     @unique
  /// Timestamp when the email was verified, null when unverified.
  emailVerified DateTime?
  /// Profile image URL returned from OAuth providers or user upload.
  image         String?
  /// Hashed password for email/password accounts. Optional for OAuth accounts.
  password      String?
  /// The role of the user (OWNER, TRAINER, MEMBER). Defaults to MEMBER for newly
  /// created OAuth accounts such as Google sign‑ins. Required for access control.
  role          Role      @default(MEMBER)
  /// Optional phone number for the user.
  phone         String?
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
  // Relations to Member and Trainer. At most one of these will be set per User.
  Member        Member?
  Trainer       Trainer?
  /// Relations used by NextAuth. Accounts represent OAuth connections; sessions are used when using database session strategy.
  accounts      Account[]
  sessions      Session[]
  notifications Notification[]
}

/// Member contains additional data for users with the MEMBER role. The
/// primary key is the same as the associated User id.
model Member {
  id                String   @id
  user              User     @relation(fields: [id], references: [id], onDelete: Cascade)
  joinDate          DateTime
  plan              PlanType
  planExpiry        DateTime
  planStatus        PlanStatus
  trainerId         String?
  trainer           Trainer? @relation("TrainerMembers", fields: [trainerId], references: [id])
  healthNotes       String?
  attendanceCount   Int      @default(0)
  sessionsRemaining Int      @default(0)
  age               Int
  gender            Gender
  // Relations
  Attendance        AttendanceRecord[]
  Invoice           Invoice[]
  WorkoutPlan       WorkoutPlan[]
  SessionLog        SessionLog[]
  Review            Review[]
  Booking           Booking[]
  NutritionProfile  NutritionProfile?
  MealPlans         MealPlan[]
}

/// Trainer contains additional data for users with the TRAINER role. The
/// primary key is the same as the associated User id. The schedule field
/// stores the weekly schedule as JSON; see the README for the expected shape.
model Trainer {
  id          String    @id
  user        User      @relation(fields: [id], references: [id], onDelete: Cascade)
  specialization String
  rating      Float     @default(0)
  reviewCount Int       @default(0)
  memberCount Int       @default(0)
  availability Availability
  schedule    Json?
  // Relations
  Members     Member[]  @relation("TrainerMembers")
  WorkoutPlan WorkoutPlan[]
  SessionLog  SessionLog[]
  Review      Review[]
  Booking     Booking[]
}

/// AttendanceRecord stores each check‑in/out event for a member.
model AttendanceRecord {
  id        String   @id @default(uuid())
  memberId  String
  member    Member   @relation(fields: [memberId], references: [id], onDelete: Cascade)
  date      DateTime
  checkIn   DateTime
  checkOut  DateTime?
  method    Method
}

/// Invoice records payments for membership plans.
model Invoice {
  id        String   @id @default(uuid())
  memberId  String
  member    Member   @relation(fields: [memberId], references: [id], onDelete: Cascade)
  plan      PlanType
  amount    Int
  date      DateTime
  status    InvoiceStatus
  createdAt DateTime @default(now())
}

/// WorkoutPlan stores a set of exercises for a particular member on a
/// particular day, created by a trainer.
model WorkoutPlan {
  id        String    @id @default(uuid())
  memberId  String
  trainerId String
  member    Member    @relation(fields: [memberId], references: [id], onDelete: Cascade)
  trainer   Trainer   @relation(fields: [trainerId], references: [id], onDelete: Cascade)
  day       String
  notes     String?   @db.Text
  createdAt DateTime  @default(now())
  exercises Exercise[]
}

/// Exercise is a single exercise definition within a workout plan.
model Exercise {
  id            String      @id @default(uuid())
  workoutPlanId String
  workoutPlan   WorkoutPlan @relation(fields: [workoutPlanId], references: [id], onDelete: Cascade)
  name          String
  sets          Int
  reps          String
  rest          String
  notes         String?     @db.Text
}

/// SessionLog captures the outcome of a training session between a trainer and a member.
model SessionLog {
  id         String   @id @default(uuid())
  memberId   String
  trainerId  String
  member     Member   @relation(fields: [memberId], references: [id], onDelete: Cascade)
  trainer    Trainer  @relation(fields: [trainerId], references: [id], onDelete: Cascade)
  date       DateTime
  duration   Int
  exercises  String[]
  notes      String?  @db.Text
  completed  Boolean
  createdAt  DateTime @default(now())
}

/// Review allows members to leave feedback for their trainers.
model Review {
  id        String   @id @default(uuid())
  trainerId String
  memberId  String?
  trainer   Trainer  @relation(fields: [trainerId], references: [id], onDelete: Cascade)
  member    Member?  @relation(fields: [memberId], references: [id])
  rating    Int
  feedback  String
  date      DateTime
}

/// Booking reserves a training slot for a member with a trainer.
model Booking {
  id        String   @id @default(uuid())
  memberId  String
  trainerId String
  member    Member   @relation(fields: [memberId], references: [id], onDelete: Cascade)
  trainer   Trainer  @relation(fields: [trainerId], references: [id], onDelete: Cascade)
  date      DateTime
  time      String
  status    BookingStatus
  createdAt DateTime @default(now())
}

/// NutritionProfile stores high‑level nutrition preferences for a member.
model NutritionProfile {
  id                String   @id @default(uuid())
  memberId          String   @unique
  member            Member   @relation(fields: [memberId], references: [id], onDelete: Cascade)
  age               Int?
  weight            Float?
  height            Float?
  fitnessGoal       FitnessGoal
  activityLevel     ActivityLevel
  dietaryPreference DietaryPreference
  cuisinePreference String?  // e.g., "South Indian", "North Indian"
  usualDiet         String?  @db.Text
  allergies         String[]
  restrictions      String[]
  
  // AI Calculated Targets
  targetCalories    Int?
  targetProtein     Float?
  targetCarbs       Float?
  targetFat         Float?
  
  completed         Boolean  @default(false)
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt
}


/// MealPlan aggregates meals for a given date and member.
model MealPlan {
  id           String   @id @default(uuid())
  memberId     String
  member       Member   @relation(fields: [memberId], references: [id], onDelete: Cascade)
  date         DateTime
  totalCalories Int
  totalProtein  Int
  totalCarbs    Int
  totalFat      Int
  meals        Meal[]
}

/// Meal defines an individual meal within a meal plan.
model Meal {
  id         String   @id @default(uuid())
  mealPlanId String
  mealPlan   MealPlan @relation(fields: [mealPlanId], references: [id], onDelete: Cascade)
  type       MealType
  name       String
  description String
  calories   Int
  protein    Int
  carbs      Int
  fat        Int
  completed  Boolean
}

/// The Account model is used by NextAuth to store OAuth provider accounts associated with users. Each unique
/// provider and providerAccountId pair identifies an external account. Additional tokens (access_token,
/// refresh_token, id_token) are stored for convenience. If you don't use OAuth providers, this model can still
/// exist without being used.
model Account {
  id                 String   @id @default(cuid())
  userId             String
  /// Type of account (e.g. OAuth). See the NextAuth docs for possible values.
  type               String
  /// Name of the provider (e.g. google).
  provider           String
  /// The provider account id from the OAuth provider.
  providerAccountId  String
  refresh_token      String?  @db.VarChar(512)
  access_token       String?  @db.VarChar(512)
  expires_at         Int?
  token_type         String?
  scope              String?
  id_token           String?  @db.VarChar(2048)
  session_state      String?
  user               User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

/// The Session model is used by NextAuth when using the database session strategy. Since we use JWT sessions
/// in this project, sessions may remain unused, but are defined here for completeness. They can also be
/// populated by other adapters if needed.
model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

/// The VerificationToken model is used by NextAuth to support features such as email verification and password
/// reset flows. It stores tokens and their expiration timestamps. The combination of identifier and token
/// fields must be unique.
model VerificationToken {
  id         String   @id @default(cuid())
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

/// Equipment represents gym machinery or resources.
model Equipment {
  id              String      @id @default(uuid())
  name            String
  category        String      // e.g., Cardio, Strength, Functional
  status          String      // e.g., Operational, Under Maintenance, Broken
  lastMaintenance DateTime?
  nextMaintenance DateTime?
  purchaseDate    DateTime?
  maintenanceLogs MaintenanceRecord[]
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt
}

/// MaintenanceRecord stores history of repairs and checks for equipment.
model MaintenanceRecord {
  id            String    @id @default(uuid())
  equipmentId   String
  equipment     Equipment @relation(fields: [equipmentId], references: [id], onDelete: Cascade)
  date          DateTime
  type          String    // e.g., Routine Check, Repair
  description   String
  cost          Float?
  performedBy   String?
}

/// Notification stores in-app alerts for users.
model Notification {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  title     String
  message   String
  read      Boolean  @default(false)
  createdAt DateTime @default(now())
}
